# zmqscript

./: CMakeLists.txt  README.md
include/: log.hpp  server.hpp
scripts/: build.sh  start.sh  stop.sh
src/: log.cpp  pgm.cpp  server.cpp  zmqscript.cpp
test/: commands.json  send.cpp  testargs.cpp
